# frisbo

./: README.md  pyproject.toml
examples/: basic_usage.py  inventory_sync.py  logging_example.py  orders_management.py  product_management.py  proxy_usage.py
frisbo/: __init__.py  client.py  exceptions.py  models.py  types.py
frisbo/resources/: __init__.py  auth.py  base.py  inbound.py  invoices.py  orders.py  organizations.py  products.py
